# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("media_engine_common_avcodeclist_config") {
  visibility = [ ":*" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wunused-parameter",
  ]

  include_dirs = [
    "//foundation/multimedia/player_framework/services/engine/common/avcodeclist",
    "//foundation/multimedia/player_framework/services/utils/include",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//foundation/multimedia/player_framework/services/services/engine_intf",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "//commonlibrary/c_utils/base/include",
    "//third_party/libxml2/include",
  ]
}

ohos_static_library("media_engine_common_avcodeclist") {
  sources = [
    "avcodec_ability_singleton.cpp",
    "avcodec_xml_parser.cpp",
    "avcodeclist_engine_gst_impl.cpp",
  ]

  configs = [
    ":media_engine_common_avcodeclist_config",
    "//foundation/multimedia/player_framework/services/dfx:media_service_dfx_public_config",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils_public_config",
  ]

  deps = [
    "//foundation/multimedia/player_framework/services/dfx:media_service_dfx",
    "//foundation/multimedia/player_framework/services/utils:media_format",
    "//foundation/multimedia/player_framework/services/utils:media_service_utils",
    "//third_party/libxml2:xml2",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_player_framework"
}
